--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -17,7 +17,7 @@ address:
   - code: University of California
     address: Department of Ecology, Evolution, and Marine Biology, Santa Barbara, CA 93106, USA
 abstract: |
-  Coral reef ecosystems owe their ecological success--and vulnerability to climate change--to the symbiotic metabolism of corals and *Symbiodinium* spp. The urgency to understand and predict the stability and breakdown of these symbioses (i.e., coral 'bleaching') calls for the development and application of theoretical tools. While the biological complexity of the symbiosis is well-suited to dynamical modeling, the theoretical complexity of certain approaches makes them inaccessible to many biologists, thus limiting their potential application and utility. Here, we develop a simplified dynamic bioenergetic model of coral-algal symbiosis that demonstrates realistic steady-state behavior across gradients of light, nutrients, and feeding. Furthermore, through a mechanistic treatment of photo-oxidative stress, the model displays dynamic responses of bleaching and recovery, and suggests that these phenomena represent transitions between alternative stable states. A suite of complex observed behaviors reproduced by this model suggests it has captured many important attributes of the system; meanwhile, its modular framework and open source R code are designed to facilitate expansion and problem-specific applications. We see high utility for this model in elucidating the mechanistic underpinnings of complex responses, generating testable hypotheses, and predicting integrated responses to simultaneous changes in multiple environmental inputs.
+  Coral reef ecosystems owe their ecological success--and vulnerability to climate change--to the symbiotic metabolism of corals and *Symbiodinium* spp. The urgency to understand and predict the stability and breakdown of these symbioses (i.e., coral 'bleaching') calls for the development and application of theoretical tools. While the biological complexity of the symbiosis is well-suited to dynamical modeling, the theoretical complexity of certain approaches makes them inaccessible to many biologists, thus limiting their potential application and utility. Here, we develop a simplified dynamic bioenergetic model of coral-algal symbiosis that demonstrates realistic steady-state patterns in coral growth and symbiont abundance across gradients of light, nutrients, and feeding. Furthermore, through a mechanistic treatment of photo-oxidative stress, the model displays dynamic responses of bleaching and recovery, and suggests that these phenomena represent transitions between alternative stable states. A suite of complex observed behaviors reproduced by the model suggests it captures many important attributes of the system; meanwhile, its modular framework and open source R code are designed to facilitate expansion and problem-specific applications. We see high utility for this modeling framework in generating testable hypotheses and predicting integrated, mechanistic responses of corals to environmental change.
 
 bibliography: library.bib
 output: 
